# equalizer

./: .gitignore  Makefile  analyzer.py  eq.py  gui.kv  gui.py  main.py  process.py  pyproject.toml
gui_dir/: back.kv  create_file.kv  front.kv  main.kv  simple_widgets.kv
profiles/: a.json
validation/: generate_sweep.py  help.txt
