[tool.poetry]
name = "equalizer"
version = "0.1.0"
description = ""
authors = ["Luís Otávio Amorim <luisotaviolamorim@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
matplotlib = "^3.5.3"
numpy = "^1.23.1"
scipy = "^1.9.0"
PyAudio = "^0.2.12"
kivymd = "^1.1.1"

[tool.poetry.dev-dependencies]
blue = "^0.9.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
